--- a/TemplateConan/presentacion.tex
+++ b/TemplateConan/presentacion.tex
@@ -35,48 +35,8 @@
 % Para usar varias columnas
 \usepackage{multicol}
 
-% Para poner algortmos en pseudo código
-\usepackage{algpseudocode}
-% Ambiente flotante para los algoritmos
-\usepackage{algorithm} 
-% Hacer los comentarios en el pseudocódigo similares a los de C++
-%\algrenewcommand{\algorithmiccomment}[1]{\hskip3em$//$ #1}
-% El paquete algorithm, no tiene traducción automática
-\floatname{algorithm}{Algoritmo}
-\renewcommand{\algorithmicrequire}{\textbf{Entradas:}}
-\renewcommand{\algorithmicensure}{\textbf{Salidas:}}
-\renewcommand{\listalgorithmname}{Índice de algoritmos}
-
-
-%Para insertar código fuente en algún lenguaje de programación
-\usepackage[newfloat=true]{minted} 
-% Requiere que compiles usando:
-% $xelatex --shell-escape input.tex
-
-% Configuración del entorno minted para poner código fuente
-\DeclareCaptionFormat{mitedFormat}{%
-    \textbf{#1#2}#3}
-\DeclareCaptionStyle{minetdStyle}{skip=0cm,width=.85\textwidth,justification=centering,
-  font=footnotesize,singlelinecheck=off,format=mitedFormat,labelsep=space}
-\newenvironment{mintedCode}{\captionsetup{type=listing,style=minetdStyle}}{}
-% Cambia el nombre de la etiqueta. Afecta a todos los códigos minted del documento
-%\SetupFloatingEnvironment{listing}{name=Código}
-%\captionsetup[listing]{labelformat=empty}
-
-
-% Opciones de minted para el lenguaje C++
-\setminted[cpp]{frame=lines,framesep=0.25cm,baselinestretch=1,fontsize=\scriptsize,breaklines}
-% Cuando lo hagas dentro de un párrafo el tamaño de fuente debe ser normal
-\setmintedinline[cpp]{fontsize=auto}
-
 % Para usar las comillas en español
 \usepackage{dirtytalk}
-
-% Crear un comando con el nombre de la UNAM
-\newcommand{\unam}{
-  \bfseries
-  \normalsize{Universidad Nacional Autónoma de México}
-}
 
 % Crear un comando para el email
 \newcommand{\email}[1]{
@@ -110,24 +70,9 @@
 \setbeamercolor{block title alerted}{fg=white,bg=red}
 \setbeamercolor{alerted text}{fg=red}
 
-% Definición de colores especiales
-\definecolor{azul_unam}{RGB}{0, 43, 122}
-\definecolor{dorado_unam}{RGB}{187, 136, 0}
-\definecolor{amarillo_quemado}{RGB}{212, 180, 21}
-
-% \setbeamercolor{frametitle}{fg=black,bg=amarillo_quemado}
-% \setbeamercolor{title}{fg=azul_unam,bg=dorado_unam}
-% \setbeamercolor{title in head/foot}{fg=black,bg=amarillo_quemado}
-% \setbeamercolor{subsection in head/foot}{fg=azul_unam,bg=dorado_unam}
-% \setbeamercolor{section in head/foot}{fg=dorado_unam}
-% \setbeamercolor{author in head/foot}{fg=dorado_unam}
-% \setbeamercolor{institute in head/foot}{fg=dorado_unam}
-% \setbeamercolor{page number in head/foot}{fg=azul_unam,bg=dorado_unam}
-% \setbeamercolor{date in head/foot}{fg=azul_unam,bg=dorado_unam}
-
 % Pongo linkcolor vacío para que los links internos no tengan color
 % Solo los links externos tienen color
-\hypersetup{colorlinks,linkcolor=,urlcolor=azul_unam}
+\hypersetup{colorlinks,linkcolor=,urlcolor=blue}
 
 \setbeamertemplate{caption}{\insertcaption}
 \beamertemplatenavigationsymbolsempty
