Mas correcciones torre del elefante

--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -40,7 +40,7 @@
 \column[t]{0.6\textwidth}
     \begin{itemize}
          \item Publicada por primera vez en Weird Tales
-         \item Alrededor de unas 20 páginas.
+         \item Alrededor de unas 20 páginas
          \begin{itemize}
             \item 9800 palabras en Ingles
             \item 10600 palabras en Español
@@ -108,35 +108,35 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}{}
-\begin{figure}[htp]
- \centering
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/BarryWindsorSmith}
-   \caption{Barry Windsor Smith}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/SalBuscema}
-   \caption{Silvio \say{Sal} Buscema}
- \end{subfigure}
- ~
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/RoyThomas}
-   \caption{Roy Thomas}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/SamRosen1964}
-   \caption{Sam Rosen}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/StanLee}
-   \caption{Stand Lee}
- \end{subfigure}
-\end{figure}
-\end{frame}
+% \begin{frame}{}
+% \begin{figure}[htp]
+%  \centering
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/BarryWindsorSmith}
+%    \caption{Barry Windsor Smith}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/SalBuscema}
+%    \caption{Silvio \say{Sal} Buscema}
+%  \end{subfigure}
+%  ~
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/RoyThomas}
+%    \caption{Roy Thomas}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/SamRosen1964}
+%    \caption{Sam Rosen}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/StanLee}
+%    \caption{Stand Lee}
+%  \end{subfigure}
+% \end{figure}
+% \end{frame}
 
 
 \begin{frame}{The savage sword of Conan}
@@ -150,7 +150,7 @@
 \column[t]{0.6\textwidth}
     \begin{itemize}
          \item Número 24 en la serie
-         \item 65 páginas del ejemplar.
+         \item 65 páginas del ejemplar
          \item 40 de la historia
          \item Créditos:
          \begin{description}
@@ -163,30 +163,30 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}{}
-\begin{figure}[htp]
- \centering
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/JohnBuscema}
-   \caption{John Buscema}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/AlfredoAlcala}
-   \caption{Alfredo Alcalá}
- \end{subfigure}
- ~
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/RoyThomas}
-   \caption{Roy Thomas}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.16\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/EarlNorem}
-   \caption{Earl Norem}
- \end{subfigure}
-\end{figure}
-\end{frame}
+% \begin{frame}{}
+% \begin{figure}[htp]
+%  \centering
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/JohnBuscema}
+%    \caption{John Buscema}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/AlfredoAlcala}
+%    \caption{Alfredo Alcalá}
+%  \end{subfigure}
+%  ~
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/RoyThomas}
+%    \caption{Roy Thomas}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.16\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/EarlNorem}
+%    \caption{Earl Norem}
+%  \end{subfigure}
+% \end{figure}
+% \end{frame}
 
 \begin{frame}{Conan}
 \begin{columns}
@@ -230,40 +230,40 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}{}
-\begin{figure}[htp]
- \centering
- \begin{subfigure}[b]{0.17\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/CaryNord}
-   \caption{Cary Nord}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.17\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/MichaelKaluta}
-   \caption{Michael Kaluta}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.17\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/KurtBusiek}
-   \caption{Kurt Busiek}
- \end{subfigure}
-\\
- \begin{subfigure}[b]{0.17\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/DaveStewart}
-   \caption{Dave Steward}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.17\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/JoseLadronn}
-   \caption{José Ladrönn}
- \end{subfigure}
-~
- \begin{subfigure}[b]{0.17\textwidth}
-   \includegraphics[width=\textwidth]{img/artistas/RichardStarkings}
-   \caption{Richard Starkings}
- \end{subfigure}
-\end{figure}
-\end{frame}
+% \begin{frame}{}
+% \begin{figure}[htp]
+%  \centering
+%  \begin{subfigure}[b]{0.17\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/CaryNord}
+%    \caption{Cary Nord}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.17\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/MichaelKaluta}
+%    \caption{Michael Kaluta}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.17\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/KurtBusiek}
+%    \caption{Kurt Busiek}
+%  \end{subfigure}
+% \\
+%  \begin{subfigure}[b]{0.17\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/DaveStewart}
+%    \caption{Dave Steward}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.17\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/JoseLadronn}
+%    \caption{José Ladrönn}
+%  \end{subfigure}
+% ~
+%  \begin{subfigure}[b]{0.17\textwidth}
+%    \includegraphics[width=\textwidth]{img/artistas/RichardStarkings}
+%    \caption{Richard Starkings}
+%  \end{subfigure}
+% \end{figure}
+% \end{frame}
 
 \section{Resumen}
 
@@ -519,8 +519,8 @@
  \item Viejo, sabio y derrotado
  \item Espera el momento de su venganza
  \item Busca la redención
- \item El dios Hindu Ganesha
- \item Se autodenomina: Yogah de Yag
+ \item Referencia a el dios Hindu Ganesha
+ \item Se autodenomina: Yogah de Yag, o Yog
 \end{itemize}
 \column[t]{0.6\textwidth}
 \begin{figure}[htp]
@@ -842,7 +842,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \item La anécdota de Yara y el príncipe que convierte en araña
     \item El origen de Yog-Khosa
     \item Tauros cuenta como obtuvo la cuerda
-    \item Conan recuenta sus anecdotas, la religión y el elefante
+    \item Conan recuenta sus anecdotas: la religión y el elefante
  \end{itemize}
  \column[t]{0.6\textwidth}
     \begin{figure}[htb]
