--- a/TorreElefante/presentacion.tex
+++ b/TorreElefante/presentacion.tex
@@ -49,9 +49,9 @@
 \title[La torre del elefante]{La torre del elefante}
 \subtitle{de Robert E. Howard}
 \author[Nemediano]{Análisis de una historia de Conan por Nemediano}
-\institute[La espada de Almuric]{
+\institute[El baúl de Howard]{
 %     email for contact
-    \normalsize{\email{nemediano@gmail.com}}
+    \normalsize{\email{https://nemediano.github.io/canalREH/}}
 %    university name
 %    \unam
 }
