--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -1,12 +1,3 @@
-% Primer slide contiene el título
-\begin{frame}{}
-    \maketitle
-\end{frame}
-
-%Segundo slide el índice
-\begin{frame}{Agenda}
-    \tableofcontents
-\end{frame}
 
 \begin{frame}{La torre del elefante}
 \begin{columns}
@@ -14,12 +5,12 @@
  \begin{figure}[htb]
   \centering
   \includegraphics[width=0.5\textwidth]{img/Intro}
-\end{figure}    
+\end{figure}
 \column[t]{0.5\textwidth}
      \begin{itemize}
          \item Una historia corta de Robert E. Howard
          \item Una de sus mejores historias
-         \item Espada y hechizería pura
+         \item Espada y hechicería pura
          \begin{itemize}
           \item Ilustración de Mark Schultz
          \end{itemize}
@@ -36,7 +27,7 @@
     \centering
         \includegraphics[width=0.5\textwidth]{img/WeirdTales-1933-03}
         \caption{Marzo de 1933}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.6\textwidth}
     \begin{itemize}
          \item Publicada por primera vez en Weird Tales
@@ -91,7 +82,7 @@
     \centering
         \includegraphics[width=0.55\textwidth]{img/TheBarbarian004Portada}
         \caption{26 de Enero de 1971}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.6\textwidth}
     \begin{itemize}
          \item Número 4 en la serie
@@ -146,7 +137,7 @@
     \centering
         \includegraphics[width=0.6\textwidth]{img/TSSC24Portada}
         \caption{6 de Septiembre de 1977}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.6\textwidth}
     \begin{itemize}
          \item Número 24 en la serie
@@ -209,7 +200,7 @@
  \end{subfigure}
 \end{figure}
 \begin{center}
-2005    
+2005
 \end{center}
 \column[t]{0.4\textwidth}
     \begin{itemize}
@@ -274,13 +265,13 @@
     \centering
         \includegraphics[width=0.9\textwidth]{img/res/01}
         \caption{El Maul}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.5\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.9\textwidth]{img/res/02}
         \caption{Una taberna}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -291,13 +282,13 @@
     \centering
         \includegraphics[width=0.65\textwidth]{img/res/03}
         \caption{El Kothio}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.5\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.55\textwidth]{img/res/04}
         \caption{Conan entra en escena}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -308,13 +299,13 @@
     \centering
         \includegraphics[width=0.7\textwidth]{img/res/05}
         \caption{Una pelea}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.5\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.4\textwidth]{img/res/06}
         \caption{La torre}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -325,13 +316,13 @@
     \centering
         \includegraphics[width=0.5\textwidth]{img/res/07}
         \caption{El muro exterior}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.5\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.7\textwidth]{img/res/08}
         \caption{Tauros de Nemedia}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -342,13 +333,13 @@
     \centering
         \includegraphics[width=0.85\textwidth]{img/res/09}
         \caption{Los guardianes del jardín}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.3\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.28\textwidth]{img/res/10}
         \caption{Escalada}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -359,13 +350,13 @@
     \centering
         \includegraphics[width=0.8\textwidth]{img/res/11}
         \caption{Una puerta sin cerrojo}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.5\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.9\textwidth]{img/res/12}
         \caption{El fin de Tauros}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -376,13 +367,13 @@
     \centering
         \includegraphics[width=0.7\textwidth]{img/res/13}
         \caption{El guardian de la torre}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.6\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.85\textwidth]{img/res/14}
         \caption{Una muerte fortuita}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -393,13 +384,13 @@
     \centering
         \includegraphics[width=0.85\textwidth]{img/res/15}
         \caption{El cautivo}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.4\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.85\textwidth]{img/res/16}
         \caption{Era venerado como un díos}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -410,13 +401,13 @@
     \centering
         \includegraphics[width=0.55\textwidth]{img/res/17}
         \caption{Una muerte piadosa}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.6\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.7\textwidth]{img/res/18}
         \caption{El corazón y la sangre}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -427,13 +418,13 @@
     \centering
         \includegraphics[width=0.7\textwidth]{img/res/19}
         \caption{Una promesa}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.7\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.8\textwidth]{img/res/20}
         \caption{La venganza de Yag-Kosha}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -444,13 +435,13 @@
     \centering
         \includegraphics[width=0.8\textwidth]{img/res/21}
         \caption{El fin de Yaga}
-    \end{figure}    
+    \end{figure}
 \column[t]{0.5\textwidth}
     \begin{figure}[htb]
     \centering
         \includegraphics[width=0.5\textwidth]{img/res/22}
         \caption{La torre se derrumba}
-    \end{figure}    
+    \end{figure}
 \end{columns}
 \end{frame}
 
@@ -461,7 +452,7 @@
 \column[t]{0.4\textwidth}
 \begin{itemize}
  \item Un joven bárbaro del norte
- \item Intrepido, impulsivo y desconfiado
+ \item Intrépido, impulsivo y desconfiado
  \item Poco acostumbrado a la civilización
  \item Primitivo, fuerte y rebelde
 \end{itemize}
@@ -623,7 +614,7 @@
 \column[t]{0.4\textwidth}
 \begin{itemize}
  \item Guardián del piso superior de la torre
- \item Astuto, pese a ser un monstruo
+ \item Astuto, pese a ser una bestia
 \end{itemize}
 \column[t]{0.6\textwidth}
 \begin{figure}[htp]
@@ -683,14 +674,14 @@ Había estado muchas horas en cuclillas en los patios de los filósofos, escucha
 
 \begin{frame}{}
 \begin{exampleblock}{Hombres civilizados discutiendo}
-Los hombres civilizados son menos amables que los salvajes porque saben que pueden ser más descorteses sin correr el riesgo de que les partan la cabeza.
+Los hombres civilizados son menos amables que los salvajes porque saben que pueden ser descorteses sin correr el riesgo de que les partan la cabeza; por regla general.
 \end{exampleblock}
 \say{\textit{Civilized men are more discourteous than savages because they know they can be impolite without having their skulls split, as a general thing.}}
 \end{frame}
 
 \begin{frame}{}
 \begin{exampleblock}{La culpabilidad de una raza sobre sus hombros}
-Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasión. Conan no sabía quién era ese monstruo, pero era tan evidente su terrible y patético sufrimiento que, sin saber por qué, le embargó una abrumadora tristeza. Sintió que estaba presenciando una tragedia cósmica y sintió vergüenza, como si la culpa de toda una raza hubiera caído sobre él.
+Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasión. Conan no sabía quién era ese monstruo, pero era tan evidente su terrible y patético sufrimiento, que sin saber por qué, le embargó una abrumadora tristeza. Sintió que estaba presenciando una tragedia cósmica y sintió vergüenza, como si la culpa de toda una raza hubiera caído sobre él.
 \end{exampleblock}
 \say{\textit{And suddenly all fear and repulsion went from him, to be replaced by a great pity. What this monster was, Conan could not know, but the evidences of its sufferings were so terrible and pathetic that a strange aching sadness came over the Cimmerian, he knew not why. He only felt that he was looking upon a cosmic tragedy, and he shrank with shame, as if the guilt of a whole race were laid upon him.}}
 \end{frame}
@@ -710,7 +701,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \centering
     \includegraphics[width=0.8\textwidth]{img/tributos/elephant07}
     \caption{Abe Papakhian}
- \end{figure} 
+ \end{figure}
  \end{columns}
 \end{frame}
 
@@ -720,13 +711,13 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \begin{itemize}
    \item Busca su beneficio personal
    \item Es el instrumento de la justicia, solo por que lo arrojan las circunstancias
-   \item Se adhiere a su propio código de ética: simple y bárbaro
+   \item Se adhiere a su propio código de ética: simple y primitivo
  \end{itemize}
  \column[t]{0.6\textwidth}
  \begin{figure}[htb]
     \centering
     \includegraphics[width=0.25\textwidth]{img/tropes/antiheroe}
- \end{figure} 
+ \end{figure}
  \end{columns}
 \end{frame}
 
@@ -734,16 +725,16 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
 \begin{columns}
 \column[t]{0.4\textwidth}
  \begin{itemize}
-    \item Al escapar del leon
+    \item Al escapar del león
     \item Y luego de la araña
     \item No se vuelve loco al ver a Yag-kosha
-    \item Conan crítica los sabios y triunfa por sus instintos
+    \item Conan crítica los eruditos y triunfa por sus instintos
  \end{itemize}
  \column[t]{0.6\textwidth}
  \begin{figure}[htb]
     \centering
     \includegraphics[width=0.6\textwidth]{img/tropes/instintos}
- \end{figure} 
+ \end{figure}
  \end{columns}
 \end{frame}
 
@@ -753,10 +744,10 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \begin{itemize}
     \item Se asusta con:
     \begin{itemize}
-      \item La magia en genral
+      \item La magia en general
       \item La historia que se cuenta de Yara
       \item El polvo que mata a lo leones
-      \item La araña
+      \item La araña gigante
       \item Al ver a Yag-kosha
     \end{itemize}
  \end{itemize}
@@ -764,7 +755,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \begin{figure}[htb]
     \centering
     \includegraphics[width=0.3\textwidth]{img/tropes/temor}
- \end{figure} 
+ \end{figure}
  \end{columns}
 \end{frame}
 
@@ -772,10 +763,10 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
   \begin{columns}
   \column[t]{0.4\textwidth}
     \begin{itemize}
-      \item Los cimerianos son magnificos alpinistas:
+      \item Los cimerios son magníficos alpinistas:
       \item Conan puede:
       \begin{itemize}
-        \item Escalar los muros exteriores del jardin
+        \item Escalar los muros exteriores del jardín
         \item Y luego escalar la torre
       \end{itemize}
     \end{itemize}
@@ -783,7 +774,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \begin{figure}[htb]
       \centering
       \includegraphics[width=0.6\textwidth]{img/tropes/escalando}
-    \end{figure} 
+    \end{figure}
   \end{columns}
 \end{frame}
 
@@ -799,8 +790,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \begin{figure}[htb]
       \centering
       \includegraphics[width=0.3\textwidth]{img/tropes/arana}
-    \end{figure} 
-  \end{columns} 
+    \end{figure}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Astronautas ancestrales}
@@ -809,14 +800,14 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \begin{itemize}
     \item Sabios y poderosos
     \item Fundan lo cimientos de la civilización
-    \item Los humanos ambiciosos buscan su conocimiento
+    \item Los humanos ambiciosos, buscan su conocimiento
  \end{itemize}
  \column[t]{0.6\textwidth}
     \begin{figure}[htb]
       \centering
       \includegraphics[width=0.6\textwidth]{img/tropes/astronautas}
-    \end{figure} 
-  \end{columns} 
+    \end{figure}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Mitos de Chtullu}
@@ -826,13 +817,14 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \item Criaturas cósmicas llegan a la tierra e interfieren con los humanos
     \item Contemplarlos puede volver loco a alguien
     \item El nombre de Yog-Khosha, o Yogah de Yag
+    \item La magia y los sueños en vez de la tecnología
  \end{itemize}
  \column[t]{0.6\textwidth}
     \begin{figure}[htb]
       \centering
       \includegraphics[width=0.6\textwidth]{img/tropes/mitos}
-    \end{figure} 
-  \end{columns} 
+    \end{figure}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Historias anidadas}
@@ -848,8 +840,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \begin{figure}[htb]
       \centering
       \includegraphics[width=0.6\textwidth]{img/tropes/historias}
-    \end{figure} 
-  \end{columns} 
+    \end{figure}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Hechicero malvado}
@@ -857,7 +849,6 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
   \column[t]{0.4\textwidth}
  \begin{itemize}
     \item Yara solo tiene poder debido a la magia negra
-    \item El poder lo corrompió
     \item Busca solo su beneficio personal
     \item Ganó su poder mediante traición
  \end{itemize}
@@ -865,7 +856,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \begin{figure}[htb]
       \centering
       \includegraphics[width=0.5\textwidth]{img/tropes/malvado}
-    \end{figure} 
+    \end{figure}
   \end{columns}
 \end{frame}
 
@@ -890,7 +881,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \begin{subfigure}[b]{0.3\textwidth}
    \includegraphics[width=\textwidth]{img/otros/RPGgame}
  \end{subfigure}
-~ 
+~
  \begin{subfigure}[b]{0.3\textwidth}
    \includegraphics[width=\textwidth]{img/otros/TowerHelephant}
  \end{subfigure}
