--- a/TorreElefante/presentacion.tex
+++ b/TorreElefante/presentacion.tex
@@ -1,6 +1,6 @@
 \documentclass[aspectratio=169,11pt]{beamer}
 % Aspect ratio:
-% 610 => 16:10 
+% 610 => 16:10
 % 169 => 16:9 (Mas común actualmente)
 % 149 => 14:9
 %  54 => 5:4
@@ -18,12 +18,12 @@
 \usepackage{anyfontsize}
 
 % Los símbolos el los conjuntos numéricos
-\usepackage{amssymb} 
+\usepackage{amssymb}
 
  % Incluir imágenes
 \usepackage{graphicx}
 % Poder usar subfiguras
-\usepackage{subcaption} 
+\usepackage{subcaption}
 % Para presentaciones usualmente no necesitamos la primer parte del caption
 \captionsetup[figure]{labelformat=empty}
 \captionsetup[subfigure]{labelformat=empty}
@@ -51,7 +51,7 @@
 \author[Nemediano]{Análisis de una historia de Conan por Nemediano}
 \institute[El baúl de Howard]{
 %     email for contact
-    \normalsize{\email{https://nemediano.github.io/canalREH/}}
+    \normalsize{\email{https://nemediano.github.io/canalREH/conan/la-torre-del-elefante}}
 %    university name
 %    \unam
 }
