TotE Add two new edictions and original image

--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -43,6 +43,22 @@
 \end{columns}
 \end{frame}
 
+\begin{frame}{Publicación}
+	\begin{columns}
+		\column[t]{0.4\textwidth}
+		\begin{figure}[htb]
+			\centering
+			\includegraphics[width=0.75\textwidth]{img/JayemWilcoxTowerOfTheElephant}
+			\caption{Jayem Wilcox}
+		\end{figure}
+		\column[t]{0.6\textwidth}
+		\begin{itemize}
+			\item Esta ilustración acompaña a la primera edición de la historia
+			\item La primera ilustración del relato
+		\end{itemize}
+	\end{columns}
+\end{frame}
+
 \begin{frame}{Orden de publicación del ciclo de Conan}
 \begin{figure}[htb]
   \centering
@@ -221,6 +237,49 @@
 \end{columns}
 \end{frame}
 
+\begin{frame}{Acción comics: La torre del elefante}
+	\begin{columns}
+		\column[t]{0.4\textwidth}
+		\begin{figure}[htb]
+			\centering
+			\includegraphics[width=0.6\textwidth]{img/AlcatenaTorre}
+			\caption{Marzo 2025}
+		\end{figure}
+		\column[t]{0.6\textwidth}
+		\begin{itemize}
+			\item Tomo único
+			\item Comic editado en Chile
+			\item 76 páginas en Blanco y Negro
+			\item Créditos:
+			\begin{description}
+				\item[Artista:] Enrique Alcatena
+				\item[Escritor:] Claudio Álvarez
+			\end{description}
+		\end{itemize}
+	\end{columns}
+\end{frame}
+
+
+\begin{frame}{Conan illustré: La Tour de l’Eléphant}
+	\begin{columns}
+		\column[t]{0.4\textwidth}
+		\begin{figure}[htb]
+			\centering
+			\includegraphics[width=0.6\textwidth]{img/SecherTorre}
+			\caption{Octubre 2022}
+		\end{figure}
+		\column[t]{0.6\textwidth}
+		\begin{itemize}
+			\item No es una adaptación, es una edición ilustrada.
+			\item Edición original en francés
+			\item 56 páginas
+			\item Créditos:
+			\begin{description}
+				\item[Artista:] Valentin Sécher
+			\end{description}
+		\end{itemize}
+	\end{columns}
+\end{frame}
 % \begin{frame}{}
 % \begin{figure}[htp]
 %  \centering
