adapt presentation to video

--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -1,3 +1,6 @@
+\begin{frame}{}
+	\maketitle
+\end{frame}
 
 \begin{frame}{La torre del elefante}
 \begin{columns}
@@ -18,8 +21,6 @@
 \end{columns}
 \end{frame}
 
-\section{Introducción}
-\subsection{Editorial}
 \begin{frame}{Publicación}
 \begin{columns}
 \column[t]{0.4\textwidth}
@@ -89,7 +90,7 @@
  \end{figure}
 \end{frame}
 
-\subsection{Adaptaciones}
+\section{Adaptaciones}
 
 \begin{frame}{Conan the barbarian}
 \begin{columns}
@@ -504,8 +505,7 @@
 \end{columns}
 \end{frame}
 
-\section{Análisis}
-\subsection{Personajes}
+\section{Personajes}
 \begin{frame}{Conan}
 \begin{columns}
 \column[t]{0.4\textwidth}
@@ -722,7 +722,7 @@
 \end{columns}
 \end{frame}
 
-\subsection{Citas interesantes}
+\section{Citas interesantes}
 
 \begin{frame}{}
 \begin{exampleblock}{Conan reflexiona sobre religión}
@@ -745,7 +745,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
 \say{\textit{And suddenly all fear and repulsion went from him, to be replaced by a great pity. What this monster was, Conan could not know, but the evidences of its sufferings were so terrible and pathetic that a strange aching sadness came over the Cimmerian, he knew not why. He only felt that he was looking upon a cosmic tragedy, and he shrank with shame, as if the guilt of a whole race were laid upon him.}}
 \end{frame}
 
-\subsection{Tropes literarios}
+\section{Tropes literarios}
 \begin{frame}{Espada y hechizeria}
 \begin{columns}
 \column[t]{0.4\textwidth}
@@ -919,7 +919,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
   \end{columns}
 \end{frame}
 
-\subsection{Influencias}
+\section{Influencias}
 \begin{frame}{}
  \begin{columns}
 \column[t]{0.4\textwidth}
